[package]
name = "komeo-mqtt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
paho-mqtt = { version = "0.12", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
